Added New Songs Feature + small improvements